--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@ozelot379/convert-minecraft-java-texture-to-bedrock": "latest",
     "fs-extra": "^8.1.0",
     "webpack": "^4.39.2",
-    "webpack-cli": "^3.3.7"
+    "webpack-cli": "^3.3.7",
+    "yargs": "^14.0.0"
   },
   "engines": {
     "node": ">=12.0.0"
