--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@ozelot379/convert-minecraft-java-texture-to-bedrock-cli",
+  "type": "module",
   "productName": "ConvertJavaTextureToBedrock",
   "version": "3.3.4-1",
   "description": "Convert Minecraft Java texture packs to Bedrock texture packs",
@@ -21,21 +22,15 @@
     "url": "https://github.com/ozelot379/ConvertJavaTextureToBedrock/issues"
   },
   "homepage": "https://github.com/ozelot379/ConvertJavaTextureToBedrock#readme",
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
     "@ozelot379/convert-minecraft-java-texture-to-bedrock": "3.3.4",
-    "webpack": "^4.39.2",
-    "webpack-cli": "^3.3.7",
     "yargs": "^14.0.0"
   },
+  "devDependencies": {},
   "engines": {
-    "node": ">=12.0.0"
+    "node": ">=14.0.0"
   },
   "bin": {
-    "ConvertJavaTextureToBedrock": "build/cli.js"
-  },
-  "scripts": {
-    "build": "webpack",
-    "prepublishOnly": "yarn build"
+    "ConvertJavaTextureToBedrock": "bin/ConvertJavaTextureToBedrock.mjs"
   }
 }
