--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "homepage": "https://github.com/ozelot379/ConvertJavaTextureToBedrock#readme",
   "dependencies": {
     "@ozelot379/convert-minecraft-java-texture-to-bedrock": "3.3.4",
-    "yargs": "^14.0.0"
+    "yargs": "14.2.2"
   },
   "devDependencies": {},
   "engines": {
