--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "productName": "ConvertJavaTextureToBedrock",
   "version": "3.3.4-1",
-  "description": "Convert Minecraft Java texture packs to Bedrock texture packs",
+  "description": "CLI for convert Minecraft Java texture packs to Bedrock texture packs",
   "keywords": [
     "Minecraft",
     "Texture",
