--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@ozelot379/convert-minecraft-java-texture-to-bedrock-cli",
   "type": "module",
   "productName": "ConvertJavaTextureToBedrock",
-  "version": "3.4.0",
+  "version": "3.4.0-1",
   "description": "CLI for convert Minecraft Java texture packs to Bedrock texture packs",
   "keywords": [
     "Minecraft",
