--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@ozelot379/convert-minecraft-java-texture-to-bedrock-cli",
   "type": "module",
   "productName": "ConvertJavaTextureToBedrock",
-  "version": "3.4.0-4",
+  "version": "3.4.1",
   "description": "CLI for convert Minecraft Java texture packs to Bedrock texture packs",
   "keywords": [
     "Minecraft",
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/ozelot379/ConvertJavaTextureToBedrock#readme",
   "dependencies": {
-    "@ozelot379/convert-minecraft-java-texture-to-bedrock": "3.4.0",
+    "@ozelot379/convert-minecraft-java-texture-to-bedrock": "3.4.1",
     "yargs": "14.2.2"
   },
   "devDependencies": {},
